zigbee2mqtt/service.yml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home
spec:
  type: ClusterIP
  selector:
    app: zigbee2mqtt
  ports:
    - port: 8080
      targetPort: 8080
